# MT-SPIN

./: .gitignore  main.py  pyproject.toml
data/processed_dataset/: test.parquet  train.parquet  train_combined.parquet
reports/: experiments_report.md
scripts/: check_leakage.py  eval.py  preprocess_data.py  train_lora.py
spin/: run_mtspin.sh  spin_generate.py  spin_train.py
spin/spin_data/iteration_0/: cache-1c36c336227ca91f.arrow  cache-476d47d4a9718fa3.arrow  cache-4ad25db8137457b2.arrow  cache-9a417e5914e58c51.arrow  cache-a94590fdb084eaf3_00000_of_00004.arrow  cache-a94590fdb084eaf3_00001_of_00004.arrow  cache-a94590fdb084eaf3_00002_of_00004.arrow  cache-a94590fdb084eaf3_00003_of_00004.arrow  cache-b5a1ea1500a77fcf_00000_of_00004.arrow  cache-b5a1ea1500a77fcf_00001_of_00004.arrow  cache-b5a1ea1500a77fcf_00002_of_00004.arrow  cache-b5a1ea1500a77fcf_00003_of_00004.arrow  cache-bb58518da9883219_00000_of_00004.arrow  cache-bb58518da9883219_00001_of_00004.arrow  cache-bb58518da9883219_00002_of_00004.arrow  cache-bb58518da9883219_00003_of_00004.arrow  cache-f10e953e63c6c300_00000_of_00004.arrow  cache-f10e953e63c6c300_00001_of_00004.arrow  cache-f10e953e63c6c300_00002_of_00004.arrow  cache-f10e953e63c6c300_00003_of_00004.arrow  cache-f6c1688bfc8106d3.arrow  state.json
spin/spin_data/iteration_1/: cache-18d9c87dc5b7c5f5_00000_of_00004.arrow  cache-18d9c87dc5b7c5f5_00001_of_00004.arrow  cache-18d9c87dc5b7c5f5_00002_of_00004.arrow  cache-18d9c87dc5b7c5f5_00003_of_00004.arrow  cache-19bd425053c0528f.arrow  cache-1eec90fbae1685fb_00000_of_00004.arrow  state.json  (+5 more)
(+13 files in other folders)
