[project]
name = "mt-spin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "peft>=0.18.1",
    "protobuf>=7.34.1",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.4.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
